--- a/templates/landing_1.html
+++ b/templates/landing_1.html
@@ -2,109 +2,147 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=yes">
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/landing_1.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/mobile_lending.css') }}" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/reset.css') }}">
-    <title>{{ subdomain }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="description" content="VPN для всех нужд: безопасность, анонимность и обход блокировок. Наш сервис предоставляет защищённое подключение, сохраняя ваш трафик в безопасности и обеспечивая доступ к сайтам по всему миру. Удобно, просто и быстро – подключайтесь к VPN в один клик!">
+    <meta name="keywords" content="быстрый впн, скоростной впн, впн для всех нужд, рабочий впн, дешевый впн">
+
+    <!-- Оформление предпросмотра ссылок -->
+    <!-- <meta propery="og:type" content="website">
+    <meta propery="og:url" content="">
+    <meta propery="og:image" content="">
+    <meta propery="og:title" content="">
+    <meta propery="og:description" content=""> -->
+    <!-- Оформление предпросмотра ссылок -->
+
+    <link rel="stylesheet" href="{{ url_for('static', path='styles/landing_1.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='styles/mobile_lending.css') }}" media="screen and (orientation: portrait)">
+    <link rel="stylesheet" href="{{ url_for('static', path='styles/reset.css') }}">
+    <title>{{ vpn.title }}</title>
 </head>
 <body>
     <header class="header">
         <nav class="navbar" id="navbar">
-            <h1>Fly vpn</h1>
+            <h1>{{ vpn.title }}</h1>
             <!-- adaptive -->
-            <button class="burger-menu"><img src="{{ url_for('static', path='/img/icons/burger-menu.svg') }}" alt="burger-menu"></button>
-             <!-- adaptive -->
+            <button class="burger-menu"><img src="{{ url_for('static', path='images/icons/burger-menu.svg') }}" alt="burger-menu"></button>
+            <!-- adaptive -->
             <ul class="nav_items">
-                <li><a href="#navbar">Главная</a></li>
+                <li><a href="#header_content">Главная</a></li>
                 <li><a href="#advantages">Почему именно мы?</a></li>
                 <li><a href="#guide">Как установить</a></li>
+                <div class="line_3"></div>
+                <button id="download-btn_inside">Установить</button>
             </ul>
             <button class="download_btn">Установить</button>
         </nav>
-        <section class="header_content">
+        <section class="header_content" id="header_content">
             <div class="left-hd_container">
-                <h2>Скорость и свобода в одном VPN</h2>
-                <p>Оцените нашу мощь с бесплатной пробной подпиской!</p>
+                <h2>{{ vpn.header_title }}</h2>
+                <p>{{vpn.header_description}}</p>
                 <div class="buttons-hd_container">
                     <button class="btn_download">Установить</button>
                     <button class="btn_try">Попробовать</button>
                 </div>
             </div>
             <div class="speedometer">
-                <div class="needle" id="needle"></div>
-                <div class="speed" id="speed">
-                    <h2>0</h2>
-                    <h3>Мбит/с</h3>
-                </div>
+                {% if vpn.header_image_url  %}
+                    <img src="{{ url_for('uploads', path=vpn.header_image_url)}}" alt="speedometer">
+                {% else %}
+                    <img src="{{ url_for('static', path='images/speedometer.png')}}" alt="speedometer">
+                    <div class="needle" id="needle"></div>
+                    <div class="speed" id="speed">
+                        <h2>200</h2>
+                        <h3>Мбит/с</h3>
+                    </div>
+                {% endif %}
+
             </div>
         </section>
     </header>
     <main class="main">
         <section class="advantages" id="advantages">
-            <h2>Быстрый, безопасный и доступный VPN для всех ваших нужд.</h2>
-              <ul class="advantages_container">
+            <h2>{{ vpn.opportunity_block_title }}</h2>
+            <ul class="advantages_container">
                 <li>
-                    <img src="{{ url_for('static', path='') }}../assets/images/Lightning.png" alt="Lightning">
-                    <h2>Молниеносная скорость</h2>
-                    <p>Минимальная задержка и высокая скорость.</p>
+                    <img src="{{ url_for('static', path='images/Lightning.png')}}" alt="Lightning">
+                    <h2>{{ vpn.opportunity_1_title }}</h2>
+                    <p>{{ vpn.opportunity_1_short_description }}</p>
                 </li>
                 <li>
-                    <img src="{{ url_for('static', path='') }}../assets/images/Cardholder.png" alt="Cardholder">
-                    <h2>Выгодная цена</h2>
-                    <p>Максимальная защита по выгодной стоимости.</p>
+                    <img src="{{ url_for('static', path='images/Cardholder.png')}}" alt="Cardholder">
+                    <h2>{{ vpn.opportunity_2_title }}</h2>
+                    <p>{{ vpn.opportunity_2_short_description }}</p>
                 </li>
                 <li>
-                    <img src="{{ url_for('static', path='') }}../assets/images/LockKey.png" alt="LockKey">
-                    <h2>Надежная защита</h2>
-                    <p>Используем передовые методы шифрования.</p>
+                    <img src="{{ url_for('static', path='images/LockKey.png')}}" alt="LockKey">
+                    <h2>{{ vpn.opportunity_3_title }}</h2>
+                    <p>{{ vpn.opportunity_3_short_description }}</p>
                 </li>
                 <li>
-                    <img src="{{ url_for('static', path='') }}../assets/images/ShieldCheck.png" alt="ShieldCheck">
-                    <h2>Без ограничений</h2>
-                    <p>Полная свобода без лимитов.</p>
+                    <img src="{{ url_for('static', path='images/ShieldCheck.png')}}" alt="ShieldCheck">
+                    <h2>{{ vpn.opportunity_4_title }}</h2>
+                    <p>{{ vpn.opportunity_4_short_description }}</p>
                 </li>
                 <li>
-                    <img src="{{ url_for('static', path='') }}../assets/images/Code.png" alt="Code">
-                    <h2>Прозрачный код</h2>
-                    <p>Используем октрытый исходный код без скрытых функций.</p>
+                    <img src="{{ url_for('static', path='images/Code.png')}}" alt="Code">
+                    <h2>{{ vpn.opportunity_5_title }}</h2>
+                    <p>{{ vpn.opportunity_5_short_description }}</p>
                 </li>
                 <li>
-                    <img src="{{ url_for('static', path='') }}../assets/images/PaperPlaneTilt.png" alt="PaperPlaneTilt">
-                    <h2>Легкость</h2>
-                    <p>Управляйте через Telegram</p>
+                    <img src="{{ url_for('static', path='images/PaperPlaneTilt.png')}}" alt="PaperPlaneTilt">
+                    <h2>{{ vpn.opportunity_6_title }}</h2>
+                    <p>{{ vpn.opportunity_6_short_description }}</p>
                 </li>
             </ul>
         </section>
         <section class="global_coverage">
             <div class="global_coverage-text">
-                <h2>Глобальное покрытие</h2>
-                <h3>Свобода интернета по всему миру</h3>
-                <p>С нашим VPN вы получаете доступ к сети из более чем <span>100</span> стран, обеспечивая непрерывное соединение и доступ 
-                    к контенту без географических ограничений, где бы 
-                    вы ни находились.</p>
+                <h2>{{ vpn.global_coverage_main_title }}</h2>
+                <h3>{{ vpn.global_coverage_title }}</h3>
+                <p>{{ vpn.global_coverage_description }}</p>
             </div>
-            <img src="{{ url_for('static', path='') }}../assets/images/earth.png" alt="earth">
+            {% if vpn.global_coverage_image_url %}
+            <img src="{{ url_for('uploads', path=vpn.global_coverage_image_url) }}" alt="devices">
+            {% else %}
+            <img src="{{ url_for('static', path='images/earth.png') }}" alt="devices">
+            {% endif %}
         </section>
         <section class="protect">
             <div class="protect-text">
-                <h2>Все устройства под защитой</h2>
-                <p>Наш VPN совместим с любой операционной системой – Windows, macOS, iOS, Android и Linux. Оставайтесь в безопасности, независимо от того, какое устройство вы используете.</p>
+                <h2>{{ vpn.setup_security_title }}</h2>
+                <p>{{ vpn.setup_security_description }}</p>
             </div>
-            <img src="{{ url_for('static', path='') }}../assets/images/devices.png" alt="devices">
+            {% if vpn.setup_security_image_url %}
+            <img src="{{ url_for('uploads', path=vpn.setup_security_image_url) }}" alt="devices">
+            {% else %}
+            <img src="{{ url_for('static', path='images/devices.png') }}" alt="devices">
+            {% endif %}
         </section>
         <section class="start_now">
             <h2>Начни сейчас!</h2>
-            <h3>Простой старт в три шага</h3>
+            <h3>Простой старт в два шага</h3>
             <div class="start-now_content">
-                <img src="{{ url_for('static', path='') }}../assets/images/tg.png" id="start-now_img" alt="Telegram">
+                {% if vpn.start_bot_image_url %}
+                    <img src="{{ url_for('uploads', path=vpn.start_bot_image_url)}}"
+                         id="start-now_img"
+                         alt="Telegram">
+                {% else %}
+                    <img src="{{ url_for('static', path='images/tg.png')}}" id="start-now_img" alt="Telegram">
+                {% endif %}
+
                 <div class="start-now_switch">
                     <div class="switch-top_container">
                         <div class="line_1" id="line_1"></div>
                         <h2>Запустите Telegram-бота</h2>
                         <h3>Откройте нашего бота в Telegram.</h3>
-                        <button id="change-picture">FlyVpn</button>
-                    </div>
+                         {% if vpn.start_bot_image_url %}
+                            <button id="change-picture"  onmouseenter="viewPicture('{{ url_for('uploads', path=vpn.start_bot_image_url) }}')">{{ vpn.title }}</button>
+                        {% else %}
+                            <button id="change-picture" onclick="window.location.replace('https://t.me/{{ vpn.bot_name }}')" onmouseenter="viewPicture('{{ url_for('static', path='images/tg-replace.png') }}')">{{ vpn.title }}</button>
+                        {% endif %}
+
+                            </div>
                     <div class="switch-bottom_container">
                         <div class="line_2" id="line_2"></div>
                         <h2>Следуйте инструкциям</h2>
@@ -117,7 +155,7 @@
             <div class="add_bg">
                 <h2>Испытайте VPN бесплатно</h2>
                 <h3>Начните с бесплатного пробного периода на <span>30</span> дней и оцените все преимущества нашего сервиса!</h3>
-                <button>Установить vpn</button>
+                <button>Испытать VPN</button>
             </div>
         </section>
         <section class="guide" id="guide">
@@ -125,29 +163,29 @@
             <h3>Видео инструкция</h3>
             <ul class="dropdown_pictures">
                 <li class="for_macos">
-                    <img src="{{ url_for('static', path='img/icons/macos.svg') }}" alt="macos">
+                    <img src="{{ url_for('static', path='/images/icons/macos.svg')}}" alt="macos">
                     <h2>Для Macos</h2>
-                    <button><img src="{{ url_for('static', path='img/icons/close-arrow.svg') }}" alt="arrow"></button>
+                    <button><img src="{{ url_for('static', path='images/icons/close-arrow.svg')}}" alt="arrow"></button>
                 </li>
-                <img class="image" src="{{ url_for('static', path='img/macos.png') }}" alt="macos">
+                <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/3jeeFc2Vo1U?si=PwlmG7OWlG6WWxnK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <li class="for_windows">
-                    <img src="{{ url_for('static', path='img/icons/windows.svg') }}" alt="windows">
+                    <img src="{{ url_for('static', path='/images/icons/windows.svg')}}" alt="windows">
                     <h2>Для Windows</h2>
-                    <button><img src="{{ url_for('static', path='img/icons/close-arrow.svg') }}" alt="arrow"></button>
+                    <button><img src="{{ url_for('static', path='images/icons/close-arrow.svg')}}" alt="arrow"></button>
                 </li>
-                <img src="{{ url_for('static', path='img/macos.png') }}" alt="macos">
+                <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/3jeeFc2Vo1U?si=PwlmG7OWlG6WWxnK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <li class="for_ios">
-                    <img src="{{ url_for('static', path='img/icons/app-store.svg') }}" alt="app-store">
+                    <img src="{{ url_for('static', path='/images/icons/app-store')}}.svg" alt="app-store">
                     <h2>Для IOS</h2>
-                    <button><img src="{{ url_for('static', path='img/icons/close-arrow.svg') }}" alt="arrow"></button>
+                    <button><img src="{{ url_for('static', path='images/icons/close-arrow.svg')}}" alt="arrow"></button>
                 </li>
-                <img src="{{ url_for('static', path='img/macos.png') }}" alt="macos">
+                <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/3jeeFc2Vo1U?si=PwlmG7OWlG6WWxnK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <li class="for_android">
-                    <img src="{{ url_for('static', path='img/icons/google-play.svg') }}" alt="google-play">
+                    <img src="{{ url_for('static', path='/images/icons/google-play.svg')}}" alt="google-play">
                     <h2>Для Android</h2>
-                    <button><img src="{{ url_for('static', path='img/icons/close-arrow.svg') }}" alt="arrow"></button>
+                    <button><img src="{{ url_for('static', path='images/icons/close-arrow.svg')}}" alt="arrow"></button>
                 </li>
-                <img src="{{ url_for('static', path='img/macos.png') }}" alt="macos">
+                <iframe loading="lazy" width="560" height="315" src="https://www.youtube.com/embed/3jeeFc2Vo1U?si=PwlmG7OWlG6WWxnK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </ul>
         </section>
     </main>
@@ -159,18 +197,19 @@
         </div>
         <section class="footer-content">
             <div class="footer-info">
-                <h2>Fly vpn</h2>
+                <h2>{{ vpn.title }}</h2>
                 <ul>
-                    <li><a href="#navbar">Главная</a></li>
+                    <li><a href="#header_content">Главная</a></li>
                     <li><a href="#advantages">Почему именно мы?</a></li>
                     <li><a href="#guide">Как установить</a></li>
                 </ul>
                 <button>Установить</button>
             </div>
-            <h2>© 2024 FlyVpn. Все права защищены</h2>
+            <h2>{{ vpn.license_description }}</h2>
         </section>
     </footer>
+   
 
-    <script src="{{ url_for('static', path='/scripts/index.js') }}" type="module"></script>
+    <script src="{{ url_for('static', path='scripts/script_1.js') }}" type="module"></script>
 </body>
 </html>
