--- a/static/styles/mobile_lending.css
+++ b/static/styles/mobile_lending.css
@@ -3,13 +3,21 @@ html {
     text-size-adjust         : none
 }
 
-@media screen and (orientation: portrait) and (max-width: 576px) {
+@media screen and (orientation: portrait) and (max-width: 768px) {
+    button{
+        color: #000;
+    }
+
     body {
         font-family: 'Body Grotesque Trial', sans-serif;
         max-width: 567px;
         height: fit-content;
         padding: 10px;
         box-sizing: border-box;
+    }
+
+    html, body {
+        touch-action: manipulation; 
     }
 
     .header{
@@ -22,7 +30,7 @@ html {
         left: 0;
 
         width: 100vw;
-        height: fit-content;
+        height: 80px;
 
         padding: 20px;
         box-sizing: border-box;
@@ -37,16 +45,94 @@ html {
     .burger-menu {
         display: block;
         background-color: transparent;
+
+        height: 34px;
+        width: 34px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .nav_items,
     .download_btn {
         display: none; 
+    }
+
+    .nav_items {
+        visibility: hidden; 
+
+        transition: max-width 0.3s ease-in-out;
+        
+        overflow: hidden;
+        z-index: 2;
+        
+        position: absolute;
+        top: 80px;
+        right: 0;
+        
+        background: #000;
+        
+        height: calc(100vh - 80px);
+        width: 100vw;
+        max-width: 0;
+        
+        padding: 30px 30px 0 30px;
+
+        box-sizing: border-box;
+    
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 30px;
+    }
+    
+    .nav_items.open {
+        visibility: visible; 
+        
+        display: flex;
+
+        max-width: 100vw; 
+    }
+
+    .nav_items > li{
+       height: 27px;
+    }
+
+    .nav_items > li > a{
+        font-size: 20px;
+        line-height: 28px;
+
+        text-wrap: nowrap;
+    }
+
+    .line_3{
+        display: block;
+
+        width: 100%;
+        height: 1px;
+        background-color: #212121;
+    }
+    
+    #download-btn_inside{
+        display: block;
+
+        font-family: "Body Grotesque Bold Trial", sans-serif;
+        font-size: 16px;
+        line-height: 24px;
+    
+        width: 138px;
+        height: 54px;
+    
+        padding: 15px 20px;
+        box-sizing: border-box;
+    
+        border-radius: 16px;
     }
 
     .header_content{
         max-width: 100%;
         flex-direction: column;
+        margin-top: 0;
     }
 
     .left-hd_container{
@@ -57,7 +143,10 @@ html {
         align-items: center;
     }
 
-    .left-hd_container > h2{
+    .left-hd_container h2 {
+        display: inline-block;
+        white-space: pre-wrap;
+
         font-size: 40px;
         line-height: 48px;
         text-align: center;
@@ -80,15 +169,19 @@ html {
         position: relative;
     }
 
+    .btn_download:hover{
+        bottom: 0;
+    }
+
     .speedometer{
         margin-top: 20px;
-        width: 320px;
-        height: 320px;
+        width: 300px;
+        height: 300px;
     }
 
     .needle {
         position: absolute;
-        top: calc(50% - 60px);
+        top: calc(50% - 55px);
         left: calc(50% - 10px);
     
         width: 21px;
@@ -107,9 +200,18 @@ html {
         bottom: 20px;
     }
 
+    .speed > h2{
+        font-size: 21px;
+    }
+    
+    .speed > h3{
+        font-size: 11px;
+        line-height: 21px;
+    }
+
     .advantages{
         max-width: 100%;
-        margin-top: 80px;
+        margin-top: 0;
     }
 
     .advantages > h2{
@@ -125,6 +227,15 @@ html {
     .advantages_container > li{
         min-width: 100%;
         height: 103px;
+    }
+
+    .advantages_container > li > h2{
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    .advantages_container > li > p{
+        font-size: 14px;
     }
 
     .global_coverage{
@@ -192,7 +303,7 @@ html {
     .start_now{
         max-width: 100%;
 
-        margin-top: 50px;
+        margin-top: 150px;
     }
 
     .start_now > h2{
@@ -224,6 +335,7 @@ html {
 
     .try_free{
         max-width: 100%;
+        height: 389px;
 
         margin-top: 80px;
     }
@@ -231,6 +343,9 @@ html {
     .add_bg{
         padding: 0 10px;
         box-sizing: border-box;
+        background-size: cover;
+        background-position: right;
+
     }
 
     .add_bg > h2{
@@ -238,10 +353,15 @@ html {
         line-height: 34px;
     }
 
+    .add_bg > button{
+        white-space: nowrap;
+        width: fit-content;
+    }
+
     .guide{
         max-width: 100%;
 
-        margin-top: 100px;
+        margin-top: 50px;
     }
 
     .guide > h3{
